# ChangeLog for dev-util/appdata-tools
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/appdata-tools/ChangeLog,v 1.14 2014/11/23 23:17:24 eva Exp $

  23 Nov 2014; Gilles Dartiguelongue <eva@gentoo.org>
  appdata-tools-0.1.8-r1.ebuild:
  Empty SRC_URI for dummy package.

*appdata-tools-0.1.8-r1 (23 Nov 2014)

  23 Nov 2014; Gilles Dartiguelongue <eva@gentoo.org>
  +appdata-tools-0.1.8-r1.ebuild:
  Version bump. Fix dependency issues while apps are transitioning to
  appstream.

  23 Oct 2014; Markus Meier <maekke@gentoo.org> appdata-tools-0.1.8.ebuild:
  add ~arm, bug #523924

  16 Oct 2014; Anthony G. Basile <blueness@gentoo.org>
  appdata-tools-0.1.8.ebuild:
  Keyword ~ppc ~ppc64, bug #523924

  28 Sep 2014; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Help co-maintaining this as more and more gnome apps need this

  28 Sep 2014; Jeroen Roovers <jer@gentoo.org> appdata-tools-0.1.8.ebuild:
  Marked ~hppa too.

*appdata-tools-0.1.8 (27 Sep 2014)

  27 Sep 2014; Gilles Dartiguelongue <eva@gentoo.org>
  +appdata-tools-0.1.8.ebuild:
  Version bump, required by some Gnome 3.14 packages.

  07 Jul 2014; Pacho Ramos <pacho@gentoo.org> appdata-tools-0.1.7.ebuild:
  amd64/x86 stable, bug #516188

  06 Jun 2014; Mike Frysinger <vapier@gentoo.org> appdata-tools-0.1.7.ebuild:
  Add alpha/ia64/sparc love #508918.

  03 Jun 2014; Anthony G. Basile <blueness@gentoo.org>
  appdata-tools-0.1.7.ebuild:
  Mark ~ppc ~ppc64, bug #508918

  03 May 2014; Markus Meier <maekke@gentoo.org> appdata-tools-0.1.7.ebuild:
  add ~arm, bug #508918

  07 Mar 2014; Jeroen Roovers <jer@gentoo.org> appdata-tools-0.1.7.ebuild:
  Marked ~hppa (bug #503606).

  06 Mar 2014; Lars Wendler <polynomial-c@gentoo.org>
  appdata-tools-0.1.7.ebuild:
  Added dependency on app-text/docbook-xml-dtd:4.3 (bug #503636).

*appdata-tools-0.1.7 (06 Mar 2014)

  06 Mar 2014; Lars Wendler <polynomial-c@gentoo.org>