@@ -4,14 +4,26 @@ Hash: SHA256
 DIST appdata-tools-0.1.7.tar.gz 124580 SHA256 a80333ee6107f6eb38466d2c47d0ae29527416a8fa4789c55c103fe41f79f8af SHA512 d0e32a2028f54482bd9715627bbc2050cfecfaea4be37fc3eeef273cdf989aa270a55112cbc81406dadedea87ae3521d26acf0011834d0055a473083147dcdc7 WHIRLPOOL a4ab56578ab3a82bed1c29c1fc49f58f6f2ef8932b2d1e68abe3cbf629f520113e4a556247cab7f14dde0be76d873b2694e70d4a88e0af5db39126f86e07a8bb
 DIST appdata-tools-0.1.8.tar.gz 113529 SHA256 270e3b87f565609905fcafd1f9af24186541877bfdbefdcb9229f625101f7f24 SHA512 9d2623659a1f22e8c89b65381de532ca642ef3cec3e2edefbb6f95f6d8122005b4f7d1595164aa856b9117797a01118ba73148c680aa9a379651df52b7f9e2a1 WHIRLPOOL 0862a327986641fa3c1e69b4335444795495017c6ca7bb8702c5be956ada93351b4ba6591ebdd96da73c470f39d21cc34d840dac3369d6bc07c8fbee71c3c5c9
 EBUILD appdata-tools-0.1.7.ebuild 990 SHA256 01f432cd57281c80f3b8806a99142a8a69f6147ffae60c3d14c741c87793a34c SHA512 f15536ea35ccd120ab7104130207c3dc0f9e42fe0b1c053bf9cf0d304dcb5a32c5b657e9402fa36f81e56aa31a1b556207e7779aa2f57bce63235b84c5d61188 WHIRLPOOL 08aa87954c41f59af3c5bb0507f3f2c2d6c7bec45fcf334e8aa9e8b83283f8eb6319a0290751d4aed03d26f5f1e3a6a92c89b213f1ecd5d27ef23d373763916d
-EBUILD appdata-tools-0.1.8-r1.ebuild 579 SHA256 c1680735a5edc88b0545713aaa9003aed9277ddd220bc6082be18255dd026b2a SHA512 45432a4dd4c02135a43ab206852f1eea4977670d53b30fbcd991926f62bc34c0f1d597ece38c447cd6eb0d101c3523b4db9c5f61b2f6e3dd8068c0671e418b11 WHIRLPOOL 099afb70128744d5d0f6816823edfbb788fd42a3c0ea04c4d897614c14a53ed850fea1424d4a43dc958b38eff5af5c013bad405ffd7278a791cd7d503049d825
+EBUILD appdata-tools-0.1.8-r1.ebuild 572 SHA256 9c5919e2b1d81926ccc624f43da4d6c46ab5551ced1f8f03c5045f90bc210619 SHA512 8c4148d912dea09fb9769b317db92197dbaea1d6d838bb3c4fe249a0e3ca16bb02792d2b905765827ba59e0dbf3af42e5f87c20a42cfb309b48a7acf79b225f5 WHIRLPOOL 372c3531c4bbe0aaffb0e0e4691f727f2914bd03fbc495b7a683aff1d8660dc96c6218687ea4d0d89bef72f65b7d3ae1e153a778055c7c7e8b229cd0f97e6116
 EBUILD appdata-tools-0.1.8.ebuild 980 SHA256 03bd73b8eff1c7b4b984ac65e9b88fc648eb13acdf97afba1198b2cafeadb2cc SHA512 b55645c8b99aad1061212c05aee340b9fc8265e1a77e97a2f40bb76c581de51253b7306de03625f054115e4337a43207cd6b7e7ea36d4f4c87824d60509d128b WHIRLPOOL d7c701c94d25a60cc6b2f36870af8ad09b091f0573809872bde1c9312d858ddb6cf981c37591e15b5f724d7af09b0ea2e8f867e305ef7e2a6da33faf0fb29788
-MISC ChangeLog 2022 SHA256 cc0b778fb34a30f949028591db2d1a37776d3f8f3472a48a189d19a8da52127c SHA512 354e7b981dfa3f9aac800d76735cd5c3ee81332e61cad1d0225eceabdb7aabdbf651e327f508f8d822bac3c8124271d3c600c595bf39a0773a33fb5a58eadc8c WHIRLPOOL 9ea2417c8416429ee1af6d9f4528e687189923bee9a730476b345b0821c97b58eb4d4473610f5c24dd560f946d0268c974c993adf24ba67e302d31a3dbf9b499
+MISC ChangeLog 2252 SHA256 8a5808768026c1fa51ee906e183352fc519b4a2aefd38da4b71850f29dd0babf SHA512 ae1233dde5213fa73c8de836cd206cc77ac8c3107af4d52a71fc196fcfbdf76a81dc781e93ae3af0ffc0c2f23d5c3fa8115c28bf281fc8b015116aef3f74d295 WHIRLPOOL 77e5794387bc445a484dfed816cb27622c91458d2a37454d62036ab6f832da7c7ed155c13b5369ad11ea6327449d2c27ad26e76afbd5f4f9da6f4906a2a3b3c5
 MISC metadata.xml 256 SHA256 bf3984310a6ebd050bb7c2ca94dc3e75380617ff6a4b22412c9adfbde52c93f7 SHA512 76df173a04b6ca08d16e5619ef748284e94c2a77a7d93e338b6b1044d03df30b5b209699791a63f3a50b13449c7f0c1cf0c08165c97ed01308b1444ff2724469 WHIRLPOOL 1f562d3ffdbc9100e3be561ddd75f7b627fe8276e212b54789feb3c424aaca04c59648d26100d7d86620b178ad5f4130b7f5d2349b5eed7ddda1ec4d5561ca91
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlRyawUACgkQ1fmVwcYIWAYVowCdHbE+g1fnwHRbpz0Slo4gEbkB
-hW4AoNd4qvd7LEyiHilyCYCWNxljFbfZ
-=wMji
+iQJ8BAEBCABmBQJUcxLrXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZO7S8QALOr4g8O8am3BCVQxxz8G5vM
+hveRCfYkcXZ0+B7NbbDaHvu1aITDCQIclbx0ZfYzFTOy49Z6jasNmpqhQpd3wFQX
+hYbZZzKICQL5i/+XMOZY6e96kSgeCQEzImOLtZFzuY5L5vrc66jhOcXkPNY2JA23
+gO2HTBfj+7jEdUFLWZ637ZWoOFfk2AJpq7evqyYohkqk2HYSTUbkOeLvxXteAklM
+eziPizm9MKnX78oHB8noTUIsZtkKcFbuVBqtvWnGWAjSI44m2z2qIvocUs00gXj9
+2h3XLw4zQn2iiq00wkKDNk4qvNBdsr15yN9YjpNBdzVjeGnPSJRRzg+QYJfK7EwH
+oklzDJWWh6IRDovAI6AnRo6TgFR6iXW9PonwKZacirBiU6REsoiewJtC6Z1zWQZO
+IoO1NL1F/PkvNmMuJFdyGvMqfn8oPQZ4D9baj61lcco+JSEI7N3ds5CBSsQI3S2H
+hdx+m+MWaT25NPBPMRbMiJS8I/NkGETDoUZtKcodE+cmSu/YID2UCP7HRdPPsXnb
+TRSzfs5bzDgNinUMEhOzN/Ek4Ao0fwerckbIamRhl2p5/FWv20Q2GHNliR4pVg2T
+ethbLas/eYoIYalLbt5pPhOFfKiGnOf8P0twSifWtoW8QZAT9BnqQpefq2Wbs05B
+9s3j78WWgnxLKX6GlsRG
+=7eWE
 -----END PGP SIGNATURE-----
