@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/appdata-tools/appdata-tools-0.1.8-r1.ebuild,v 1.2 2014/11/23 23:17:24 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/appdata-tools/appdata-tools-0.1.8-r1.ebuild,v 1.3 2014/11/24 11:13:46 mgorny Exp $
 
 EAPI=5
 
@@ -14,5 +14,4 @@ KEYWORDS="~amd64 ~arm ~hppa ~ppc ~ppc64"
 IUSE=""
 
 # Superseeded by appstream-glib.
-DEPEND=">=dev-libs/appstream-glib-0.3.2"
-RDEPEND=""
+RDEPEND=">=dev-libs/appstream-glib-0.3.2"
